--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,7 @@
 .App {
   text-align: center;
+  background: rgb(87,103,157);
+  background: linear-gradient(153deg, rgba(87,103,157,1) 19%, rgba(110,120,164,1) 43%, rgba(131,135,170,1) 66%, rgba(142,143,173,1) 81%, rgba(152,150,176,1) 87%, rgba(151,150,176,1) 95%, rgba(150,149,176,1) 97%, rgba(177,169,184,1) 100%);
 }
 
 .App-logo {
@@ -23,7 +25,7 @@
 }
 
 .App-link {
-  color: rgb(112, 76, 182);
+  color: white;
 }
 
 @keyframes App-logo-float {
