--- a/src/App.css
+++ b/src/App.css
@@ -1,17 +1,15 @@
 .App {
   text-align: center;
-  background: rgb(87,103,157);
-  background: linear-gradient(153deg, rgba(87,103,157,1) 19%, rgba(110,120,164,1) 43%, rgba(131,135,170,1) 66%, rgba(142,143,173,1) 81%, rgba(152,150,176,1) 87%, rgba(151,150,176,1) 95%, rgba(150,149,176,1) 97%, rgba(177,169,184,1) 100%);
 }
 
 .App-logo {
-  height: 40vmin;
+  height: 30vmin;
   pointer-events: none;
 }
 
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
-    animation: App-logo-float infinite 3s ease-in-out;
+    animation: Logo-Flip infinite 2s ease-in-out;
   }
 }
 
@@ -37,5 +35,18 @@
   }
   100% {
     transform: translateY(0px);
+  }
+}
+
+
+@keyframes Logo-Flip {
+  0% {
+    transform: rotateY(0deg);
+  }
+  50% {
+    transform: rotateY(180deg);
+  }
+  100% {
+    transform: rotateY(0deg)
   }
 }
