--- a/src/components/header/headerCSS.css
+++ b/src/components/header/headerCSS.css
@@ -1,3 +1,7 @@
+.header-body {
+  margin-top: 5px;
+}
+
 .Header-logo {
     height: 100px;
 }
@@ -6,29 +10,72 @@
     transform: scale(1.1);
 }
 
-.headerLink:hover, Nav.Link:hover {
-    color: white;
-    background-color: lightslategray;
-    border-radius: 4%;
-    padding: 3px;
+.headerLink:hover {
+    font-size: 23px;
 }
 
-Navbar.Brand {
+.link-class:hover {
+  color: white;
+  background-color: rgba(126, 126, 126, .5);
+  border-radius: 4%;
+}
+
+.rbLink {
     text-decoration: none;
-  };
+};
   
-  .header-container {
+.header-container {
       margin-top: 3px;
+}
+
+
+  @media (min-width: 992px) {
+    .egg {
+      margin-top: 5px;
+      position: absolute;
+      width: 18px;
+      height: 25px;
+      background-color: white;
+      -webkit-border-radius: 63px 63px 63px 63px / 108px 108px 72px 72px;
+      border-radius: 50% 50% 50% 50% / 60% 60% 40% 40%;
+      z-index: -10;
+      
+  
+      visibility: hidden;
+      overflow: hidden;
+    }
+  
+    .eggLink:hover > .egg {
+      visibility: visible;
+      animation: eggJump .6s ease-in-out;
+      overflow: hidden;
+    }
+  
+    .eggLink {
+      display: flex;
+      justify-content: center;
+      overflow: hidden;
+      background-color: rgb(87,103,157);
+      padding-bottom: 10px;
+    }
+  
+    .icon-class {
+      height: 30px;
+      filter: invert(80%);
+    }
+
+    .icon-class:hover {
+      filter: invert(100%);
+    }
+  
+    @keyframes eggJump {
+      0%, 100% {
+        transform: translate(0,0);
+      }
+      50% {
+        transform: translate(0, -35px);
+      }
+    }
   }
 
-  .egg {
-    width: 18px;
-    height: 25px;
-    background-color: white;
-    -webkit-border-radius: 63px 63px 63px 63px / 108px 108px 72px 72px;
-    border-radius: 50% 50% 50% 50% / 60% 60% 40% 40%;
-  }
-
-  Nav.Link {
-    position: absolute;
-  }
+  
