--- a/src/App.css
+++ b/src/App.css
@@ -13,13 +13,18 @@
   }
 }
 
-.App-header {
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+@font-face {
+  font-family: PlayfairDisplay;
+  src: url(./assets/fonts/Playfair_Display/PlayfairDisplay-VariableFont_wght.ttf);
+}
+
+.app-header {
+  width: 100%;
+}
+
+.app-header h1{
+  font-family: PlayfairDisplay;
+  font-size: 7vh;
 }
 
 .App-link {
