--- a/src/App.css
+++ b/src/App.css
@@ -24,7 +24,7 @@
 
 .app-header h1{
   font-family: PlayfairDisplay;
-  font-size: 7vh;
+  font-size: 80px;
 }
 
 .App-link {
@@ -33,10 +33,7 @@
 .app-home{
   text-align: center;
   min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
+
 }
 
 .keyboard-canvas {
