--- a/src/App.css
+++ b/src/App.css
@@ -19,12 +19,21 @@
 }
 
 .app-header {
+  display: grid;
+  height: 800px;
   width: 100%;
+  text-align: center;
+  justify-content: center;
+  align-content: center;
 }
 
 .app-header h1{
   font-family: PlayfairDisplay;
-  font-size: 80px;
+  font-size: 70px;
+}
+
+.app-header h4 {
+  font-family: PlayfairDisplay;
 }
 
 .App-link {
@@ -33,7 +42,8 @@
 .app-home{
   text-align: center;
   min-height: 100vh;
-
+  display: flex;
+  padding: 0px 300px;
 }
 
 .keyboard-canvas {
